--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <h1>Hacktoberfest 2020</h1>
-    <p>Name : YourName</p>
-    <p>Country of Residence : Country</p>
-    <img src="" alt="your potrait image">
+    <p>Name : <span style="color:blue;">Dilan</span></p>
+    <p>Age : 23</p>
+    <p><i>Country of Residence : <span style="color:orange;">S</span><span style="color:red;">r</span><span style="color:yellow;">i</span> <span style="color:green;">L</span><span style="color:red;">a</span><span style="color:yellow;">n</span><span style="color:green;">k</span><span style="color:red;">a</span></i></p>
+    <center><img src="11.jpeg" alt="Dilan" height="200" width="200"></center>
 </body>
 </html>
